--- a/.github/workflows/main-pipeline.yml
+++ b/.github/workflows/main-pipeline.yml
@@ -2,13 +2,10 @@ name: 00 - Main CI / CD Pipeline
 
 on:
   push:
-    paths-ignore:
-      - '**/*.md'
-      - '**/*.txt'
   workflow_dispatch:
 
 jobs:
   build:
     name: Build
-    uses: ./.github/workflows/build.yml
+    uses: .github/workflows/build.yml
 
