--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,7 @@ jobs:
           chmod 755 ./gradlew
           ls -ltra
           ./gradlew build
-          mkdir candidate-binary && cp build/libs/*.jar candidate-binary
+          mkdir candidate-binary && cp build/libs/demo-0.0.1-SNAPSHOT.jar candidate-binary
       - uses: actions/upload-artifact@v4
         with:
           name: Application-Binary
