--- a/.github/workflows/main-pipeline.yml
+++ b/.github/workflows/main-pipeline.yml
@@ -9,4 +9,15 @@ jobs:
     name: build
     uses: ./.github/workflows/build.yml
     secrets: inherit
-
+  docker:
+    needs: build
+    name: Build docker image
+    uses: ./.github/workflows/docker.yml
+    secrets: inherit
+  container-image-scan:
+    needs: docker
+    name: Build docker image
+    uses: ./.github/workflows/container-image-scan.yml
+    secrets: inherit
+    with:
+      image-tag: ${{ needs.docker.outputs.image-tag }}
