--- a/.github/workflows/container-scan-trivy.yml
+++ b/.github/workflows/container-scan-trivy.yml
@@ -16,36 +16,41 @@ jobs:
       security-events: write 
 
     steps:
+      # Check out the repository code
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
+      # Set up JDK 21 using the Microsoft distribution
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
         with:
-          java-version: '17'
-          distribution: 'adopt'
+          java-version: '21'
+          distribution: 'microsoft'
 
-      - name: Make gradlew executable
-        run: chmod +x ./gradlew
+      # Set up Gradle, with caching for dependencies
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v4
 
-      - name: Set up Gradle
-        uses: gradle/wrapper-validation-action@v1
-
-      - name: Build the JAR file
-        run: ./gradlew build
+      # Build the Java (Spring Boot) application using the Gradle wrapper
+      - name: Build with Gradle Wrapper
+        run: |
+          pwd
+          chmod 755 ./gradlew
+          ls -ltra
+          ./gradlew build
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
 
       - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GHCR_PAT }}
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@v3
+        uses: docker/build-push-action@v6
         with:
           context: .
           push: true
@@ -60,11 +65,15 @@ jobs:
           echo deb https://aquasecurity.github.io/trivy-repo/deb $(lsb_release -sc) main | sudo tee -a /etc/apt/sources.list.d/trivy.list
           sudo apt-get update
           sudo apt-get install -y trivy
+          pwd
+          ls -ltra
 
       - name: Check if Trivy is installed
         run: |
           which trivy || echo "Trivy is not installed"
           trivy --version || echo "Trivy version not found"
+          pwd
+          ls -ltra
 
       - name: Cache Trivy DB
         uses: actions/cache@v3
