--- a/.github/workflows/container-scan-trivy.yml
+++ b/.github/workflows/container-scan-trivy.yml
@@ -59,12 +59,15 @@ jobs:
       
       - name: Install Trivy
         run: |
-          sudo apt-get update
+          sudo apt-get update -y
           sudo apt-get install -y wget apt-transport-https gnupg lsb-release
           wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key | sudo apt-key add -
           echo deb https://aquasecurity.github.io/trivy-repo/deb $(lsb_release -sc) main | sudo tee -a /etc/apt/sources.list.d/trivy.list
-          sudo apt-get update
+          sudo apt-get update -y
           sudo apt-get install -y trivy
+          for i in {1..5}; do
+            trivy --download-db && break || sleep 60
+          done
           pwd
           ls -ltra
 
